@@ -1,3 +1,8 @@
+2008-06-02  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Remove fnmatches for a few mime-types,
+	spotted by Matthias Clasen
+
 2008-05-25  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add text/x-c, for the same reason as below
